# claude-code-camp-2026-Q2

./: .gitignore
docs/: explore_architectures.md  player02_results_opus_4.8.md  world01_results_haiku_4.5.md  world02_results_opus_4.8.md  world_coldrun.md
docs/journal/: 0_preweek.md
docs/plans/: 2026-07-24-ruby-12-context-carryover-fixes.md
docs/plans/python_port/: 00_config
week0_explore/explore_architecture/001_playing_agent/: CLAUDE.MD
week0_explore/explore_architecture/002_agent_skills/: CLAUDE.md  SKILL.md
week0_explore/explore_architecture/003b_subagent_SDK/: play_mud_sdk.py
week1_baseline/: .gitignore
week1_baseline/.boukensha/: settings.toml
week1_baseline/.boukensha/sessions/: 20260723T162247Z-a8392920.jsonl  20260723T164342Z-f85f0e53.jsonl  20260723T165750Z-fd4851c9.jsonl  20260723T184811Z-2e6f6259.jsonl  20260723T185043Z-6447f9fc.jsonl  20260723T185058Z-13ad7308.jsonl  20260724T070139Z-898a4ca6.jsonl  20260724T070410Z-12767804.jsonl  20260724T070538Z-ab10e9f1.jsonl  20260724T072903Z-1ab20e5c.jsonl  20260724T072920Z-cb6f8e4a.jsonl  20260724T073938Z-5b5b54d4.jsonl  20260724T075914Z-d4e1d9a8.jsonl  20260724T080043Z-a3b45583.jsonl
week1_baseline/python/00_config/: README.md  pyproject.toml
week1_baseline/python/00_config/boukensha/: config.py
week1_baseline/python/00_config/boukensha/tasks/: base.py  player.py
week1_baseline/python/00_config/examples/: example.py
week1_baseline/ruby/: iterations.md
week1_baseline/ruby/09_global_executable/: boukensha-0.9.0.gem
week1_baseline/ruby/12_context/: boukensha.gemspec
(+26 files in other folders)
