[project]
name = "boukensha"
version = "0.1.0"
description = "Boukensha step 0: configuration"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boukensha"]
